derived the Kc values per subject

--- a/null_synchronicity_analysis.ipynb
+++ b/null_synchronicity_analysis.ipynb
@@ -3,6 +3,24 @@
   {
    "cell_type": "code",
    "execution_count": 1,
+   "id": "49b00910",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Python 3.7.13\r\n"
+     ]
+    }
+   ],
+   "source": [
+    "! python --version"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
    "id": "17dc0ed9",
    "metadata": {},
    "outputs": [
